--- a/index.html
+++ b/index.html
@@ -6,34 +6,47 @@
   <title>T-Stephen | AI Innovator</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap">
   <style>
-    * { box-sizing: border-box; }
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background: linear-gradient(120deg, #1b1b2f, #162447);
+      background: linear-gradient(135deg, #2c003e, #390a5e);
       color: #fff;
       overflow-x: hidden;
+      animation: backgroundGlow 10s infinite alternate;
+    }
+    @keyframes backgroundGlow {
+      from {
+        background: linear-gradient(135deg, #2c003e, #390a5e);
+      }
+      to {
+        background: linear-gradient(135deg, #5e0065, #2f0051);
+      }
     }
     header {
       text-align: center;
       padding: 2rem 1rem;
-      background: #0f3460;
-      animation: fadeIn 2s ease-in-out;
+      background: rgba(15, 52, 96, 0.8);
+      backdrop-filter: blur(10px);
+      border-bottom: 2px solid #ff4c94;
     }
     header img {
       width: 120px;
       height: auto;
       border-radius: 50%;
       margin-bottom: 1rem;
+      box-shadow: 0 0 20px #ff4c94;
     }
     header h1 {
-      font-size: 2.5rem;
+      font-size: 3rem;
       color: #fddb3a;
-      margin-bottom: 0.5rem;
+      text-shadow: 0 0 10px #fddb3a;
     }
     header p {
       font-size: 1.2rem;
-      color: #aaa;
+      color: #ddd;
     }
     nav {
       background: #1f4068;
@@ -41,27 +54,32 @@
       display: flex;
       justify-content: center;
       gap: 2rem;
+      border-bottom: 1px solid #444;
     }
     nav a {
       color: #00fff5;
       text-decoration: none;
       font-weight: 600;
+      transition: color 0.3s;
+    }
+    nav a:hover {
+      color: #fddb3a;
     }
     section {
       max-width: 1000px;
       margin: auto;
       padding: 2rem;
-      animation: slideUp 1.5s ease;
     }
     .project-card {
-      background: #162447;
+      background: rgba(22, 36, 71, 0.8);
       padding: 1rem;
       border-radius: 10px;
       margin: 1rem 0;
+      box-shadow: 0 0 20px #fddb3a;
       transition: transform 0.3s;
     }
     .project-card:hover {
-      transform: scale(1.02);
+      transform: scale(1.03);
     }
     footer {
       text-align: center;
@@ -69,6 +87,26 @@
       background: #1a1a2e;
       font-size: 0.9rem;
       color: #bbb;
+    }
+    form input,
+    form textarea,
+    form button {
+      width: 100%;
+      padding: 0.8rem;
+      border: none;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      font-size: 1rem;
+    }
+    form button {
+      background: #ff4c94;
+      color: #fff;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+    form button:hover {
+      background: #ff2670;
     }
     .chatbot {
       position: fixed;
@@ -118,32 +156,6 @@
       cursor: pointer;
       z-index: 1000;
     }
-    form input, form textarea, form button {
-      width: 100%;
-      padding: 0.8rem;
-      border: none;
-      border-radius: 10px;
-      margin-bottom: 1rem;
-      font-size: 1rem;
-    }
-    form button {
-      background: #fddb3a;
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-    form button:hover {
-      background: #ffd700;
-    }
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
-    @keyframes slideUp {
-      from { transform: translateY(50px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
-    }
   </style>
 </head>
 <body>
@@ -152,13 +164,11 @@
     <h1>T-Stephen</h1>
     <p>AI Innovator | B.Tech - AI & Data Science</p>
   </header>
-
   <nav>
     <a href="#projects">Projects</a>
     <a href="#contact">Contact</a>
     <a href="#feedback">Feedback</a>
   </nav>
-
   <section id="projects">
     <h2>My Projects</h2>
     <div class="project-card">
@@ -170,7 +180,6 @@
       <p>Projects on Candidate Elimination, Decision Tree, and more.</p>
     </div>
   </section>
-
   <section id="contact">
     <h2>Contact Me</h2>
     <form action="https://formsubmit.co/tstephenraj001@gmail.com" method="POST">
@@ -180,7 +189,6 @@
       <button type="submit">Send Message</button>
     </form>
   </section>
-
   <section id="feedback">
     <h2>Inspire Me With Your Feedback ✨</h2>
     <form id="feedback-form">
@@ -191,18 +199,15 @@
     </form>
     <p>Total Visitors: <span id="visitor-count">Loading...</span></p>
   </section>
-
   <footer>
     &copy; 2025 T-Stephen | All Rights Reserved
   </footer>
-
   <div class="chatbot" id="chatbot">
     <div class="chatbot-header">🤖 Ask Me Anything</div>
     <div class="chatbot-messages" id="chatbot-messages"></div>
     <input type="text" id="chatbot-input" placeholder="Type your question..." onkeydown="if(event.key==='Enter')sendChat()" />
   </div>
   <button class="chat-btn" onclick="toggleChatbot()">💬</button>
-
   <script>
     function toggleChatbot() {
       const bot = document.getElementById('chatbot');
